--- a/css/multifilter.css
+++ b/css/multifilter.css
@@ -205,6 +205,8 @@ img {
     --line-height: 1.5;
 }
 
+
+/*
 * {
     box-sizing: border-box;
 }
@@ -214,6 +216,7 @@ body {
     font-size: var(--font-size);
     line-height: var(--line-height);
 }
+*/
 
 h1 {
     margin-bottom: calc(var(--space) * 3);
