--- a/css/multifilter.css
+++ b/css/multifilter.css
@@ -9,6 +9,15 @@ body {
 }
 
 
+/* Grow photos when you hover */
+
+.grow:hover {
+    -webkit-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    transform: scale(1.3);
+}
+
+
 /* ---- button ---- */
 
 .button {
