--- a/css/multifilter.css
+++ b/css/multifilter.css
@@ -4,8 +4,11 @@
     box-sizing: border-box;
 }
 
+
+/*NOTICE - change to 'Berlin' font family */
+
 body {
-    font-family: sans-serif;
+    font-family: 'berlin';
 }
 
 
@@ -19,7 +22,8 @@ body {
  */
 
 
-/* ---- button ---- */
+/* ---- button ---- 
+font size - 14*/
 
 .button {
     display: inline-block;
@@ -29,8 +33,8 @@ body {
     border-radius: 7px;
     background-image: linear-gradient( to bottom, hsla(0, 0%, 0%, 0), hsla(0, 0%, 0%, 0.2));
     color: #222;
-    font-family: sans-serif;
-    font-size: 16px;
+    font-family: 'berlin';
+    font-size: 14px;
     text-shadow: 0 1px white;
     cursor: pointer;
 }
@@ -106,7 +110,7 @@ body {
 .ui-group h3 {
     display: inline-block;
     margin-right: 0.2em;
-    font-size: 16px;
+    font-size: 14px;
 }
 
 .ui-group .button-group {
@@ -207,17 +211,24 @@ img {
     transition: background 0.4s, box-shadow 0.4s;
 }
 
+
+/* load fonts from external location (currently not needed)
 @import url("https://fonts.googleapis.com/css?family=Merriweather:900&display=swap");
+*/
+
+
+/* slide burger menu*/
+
 :root {
-    --color-primary: #002626;
-    --color-secondary: #f0f7ee;
+    --color-primary: #9F6C58;
+    --color-secondary: #ffffff;
     --duration: 1s;
     --nav-duration: calc(var(--duration) / 4);
     --ease: cubic-bezier(0.215, 0.61, 0.355, 1);
     --space: 1rem;
-    --font-primary: "Helvetica", sans-serif;
-    --font-heading: "Merriweather", serif;
-    --font-size: 1.125rem;
+    --font-primary: "berlin";
+    --font-heading: "berlin";
+    --font-size: 80px;
     --line-height: 1.5;
 }
 
@@ -237,7 +248,7 @@ body {
 h1 {
     margin-bottom: calc(var(--space) * 3);
     font-family: var(--font-heading);
-    font-size: calc(var(--font-size) + 6vmin);
+    font-size: calc(var(--font-size) - 30vmin);
     line-height: calc(var(--line-height) / 1.25);
 }
 
@@ -308,7 +319,7 @@ h1 {
 }
 
 .main-navigation ul {
-    font-size: 12vmin;
+    font-size: 50px;
     font-family: var(--font-heading);
     width: 100%;
 }
