--- a/css/default.css
+++ b/css/default.css
@@ -60,12 +60,9 @@ a:hover {
     width: 90%;
     max-width: 70em;
     margin: 0 auto;
-    padding: 0 1.875em 3.125em 1.875em;
+    padding: 0 auto;
 }
 
-.container>header {
-    padding: 2.875em 1.875em 1.875em;
-}
 
 .container>header h1 {
     font-size: 50px;
