--- a/css/default.css
+++ b/css/default.css
@@ -44,6 +44,7 @@ html {
 body {
     font-family: 'berlin';
     color: #88AED9;
+    z-index: 2;
 }
 
 a {
@@ -62,7 +63,6 @@ a:hover {
     margin: 0 auto;
     padding: 0 auto;
 }
-
 
 .container>header h1 {
     font-size: 50px;
