--- a/css/multifilter.css
+++ b/css/multifilter.css
@@ -5,6 +5,13 @@
 }
 
 
+/* fix drop down menu over-lay bug */
+
+.cbp-hrsub {
+    z-index: 1;
+}
+
+
 /*NOTICE - change to 'Berlin' font family */
 
 body {
@@ -87,8 +94,8 @@ font size - 14*/
 /* ---- isotope ---- */
 
 .grid {
-    z-index: -1;
-    background: #EEE;
+    z-index: -2;
+    background: #E5E7EA;
 }
 
 
@@ -98,6 +105,7 @@ font size - 14*/
     content: '';
     display: block;
     clear: both;
+    z-index: -2;
 }
 
 
@@ -167,6 +175,7 @@ font size - 14*/
     height: 70px;
     margin: 5px;
     float: left;
+    z-index: 1;
 }
 
 img {
@@ -184,6 +193,7 @@ img {
     -webkit-transform: scale(1.3);
     -ms-transform: scale(1.3);
     transform: scale(1.3);
+    z-index: 0;
 }
 
 .building_square {
@@ -191,6 +201,7 @@ img {
     height: 70px;
     margin: 5px;
     float: left;
+    z-index: -1;
 }
 
 
@@ -209,6 +220,7 @@ img {
 
 .grid-item {
     transition: background 0.4s, box-shadow 0.4s;
+    z-index: -2;
 }
 
 
@@ -228,7 +240,7 @@ img {
     --space: 1rem;
     --font-primary: "berlin";
     --font-heading: "berlin";
-    --font-size: 80px;
+    --font-size: 180px;
     --line-height: 1.5;
 }
 
@@ -259,6 +271,7 @@ h1 {
     overflow: hidden;
     clip: rect(1px, 1px, 1px, 1px);
     white-space: nowrap;
+    z-index: 5;
 }
 
 .main-navigation-toggle+label {
@@ -266,7 +279,7 @@ h1 {
     top: calc(var(--space) * 1.5);
     right: calc(var(--space) * 2);
     cursor: pointer;
-    z-index: 2;
+    z-index: 5;
 }
 
 .icon--menu-toggle {
@@ -277,6 +290,7 @@ h1 {
     width: var(--size);
     height: var(--size);
     stroke-width: 6;
+    z-index: 5;
 }
 
 .icon-group {
