fixed open divs in output - index not updted yet

--- a/css/mapall.css
+++ b/css/mapall.css
@@ -3,3 +3,14 @@
     /* 480px */
     z-index: 0;
 }
+
+
+/* This class is added on scroll */
+
+.fixedscroll {
+    z-index: 9999;
+    position: fixed;
+    left: 0;
+    /*top: 0;
+    width: 100%;*/
+}
