before add null item fix on multifilter trim error

--- a/css/multifilter.css
+++ b/css/multifilter.css
@@ -205,6 +205,14 @@ img {
 }
 
 
+/* add nullelem class one sorting with groups*/
+
+.nullElem {
+    border: none;
+    background: none;
+}
+
+
 /* Only showing tooltips when sliding handles */
 
 .noUi-tooltip {
