--- a/css/building_card.css
+++ b/css/building_card.css
@@ -1,46 +1,3 @@
-.center {
-    width: 40%;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.container {
-    /*max-width: 960px;
-    height: 100%;
-    */
-    margin: auto;
-    font-family: 'berlin';
-    line-height: 1.5;
-}
-
-h2 {
-    color: #F1CEA8;
-}
-
-.flex-grid {
-    color: white;
-    display: flex;
-    margin: auto -1rem 1rem;
-}
-
-.col {
-    background-color: #64504D;
-    margin-left: 0.5rem;
-    margin-right: 0.5rem;
-    padding: 1rem;
-}
-
-.sidebar {
-    flex: 1;
-}
-
-.main {
-    flex: 3;
-    flex-direction: column;
-}
-
 html,
 body {
     height: 100%;
@@ -49,22 +6,32 @@ body {
     min-height: 100vh;
 }
 
-
-/*
-div {
-    position: relative;
-    height: 100%;
-    width: 100%;
+.center {
+    width: 50%;
+    position: fixed;
+    top: 40%;
+    /* NOTICE a bit higher */
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
-div img {
+.summary {
+    width: 40%;
     position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
-    max-height: 100%;
-    max-width: 100%;
+    right: 50%;
 }
-*/
+
+.carousel-button {
+    position: fixed;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin-top: 2%;
+}
+
+h2 {
+    color: #F1CEA8;
+}
+
+body {
+    font-family: 'berlin';
+}
