--- a/css/building_card.css
+++ b/css/building_card.css
@@ -39,6 +39,7 @@ h2 {
 
 body {
     font-family: 'berlin';
+    margin: 0;
 }
 
 .icon-close {
@@ -100,4 +101,38 @@ body {
     --font-heading: "berlin";
     --font-size: 180px;
     --line-height: 1.5;
+}
+
+
+/* ------ Detailed page ------- */
+
+.detailed-page {
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    height: 100vh;
+}
+
+.top_container {
+    flex: 50;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: center;
+}
+
+.bottom_container {
+    flex: 50;
+    background: blue;
+}
+
+.simplex_box {
+    flex: 50;
+    background: red;
+}
+
+.graph_box {
+    flex: 50;
+    background: purple;
 }
