--- a/css/building_card.css
+++ b/css/building_card.css
@@ -122,6 +122,8 @@ body {
 .bottom_container {
     flex: 30;
     background: rgb(255, 255, 255);
+    padding-bottom: 25px;
+    /* NOTICE to keep off from button */
 }
 
 .simplex_box {
