--- a/css/multifilter.css
+++ b/css/multifilter.css
@@ -18,15 +18,12 @@ body {
     font-family: 'berlin';
 }
 
-
-/* Grow photos when you hover
-
-.grow:hover {
+.enlarge_img {
     -webkit-transform: scale(1.3);
     -ms-transform: scale(1.3);
     transform: scale(1.3);
+    z-index: 0;
 }
- */
 
 
 /* ---- button ---- 
