--- a/css/building_card.css
+++ b/css/building_card.css
@@ -113,8 +113,8 @@ body {
     height: 100vh;
     flex-wrap: nowrap;
     align-content: flex-start;
-    justify-content: flex-start;
-    align-items: center;
+    justify-content: space-between;
+    align-items: flex-start;
     /*
      display: flex;
     flex-direction: column;
@@ -124,18 +124,29 @@ body {
 }
 
 .top_container {
+    display: flex;
+    height: 50%;
+    width: 100%;
+    flex-direction: row;
+    /*
     flex: 50;
     display: flex;
     flex-direction: row;
+    */
 }
 
 .bottom_container {
+    background: rgb(255, 255, 255);
+    height: 50%;
+    padding-bottom: 25px;
+    /*
     flex: 30;
     background: rgb(255, 255, 255);
     padding-bottom: 25px;
     display: flex;
     align-items: center;
     justify-content: center;
+    */
     /* NOTICE to keep off from button */
 }
 
