--- a/css/building_card.css
+++ b/css/building_card.css
@@ -138,7 +138,10 @@ body {
 .bottom_container {
     background: rgb(255, 255, 255);
     height: 50%;
+    width: 90%;
     padding-bottom: 25px;
+    align-items: center;
+    justify-content: center;
     /*
     flex: 30;
     background: rgb(255, 255, 255);
