changing bind sort button click from the same ID to multiple ID's

--- a/css/component.css
+++ b/css/component.css
@@ -243,3 +243,10 @@ cbp-hrsub-inner>span {
         padding: 0 2em;
     }
 }
+
+
+/* Hide reset buttons */
+
+#hidden_reset_groupby {
+    display: none;
+}
