--- a/css/default.css
+++ b/css/default.css
@@ -1,4 +1,4 @@
-/* General Demo Style 
+    /* General Demo Style 
 
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
 @font-face {
@@ -9,83 +9,78 @@
     font-style: normal;
 }
 */
-
-body,
-html {
-    font-size: 100%;
-    padding: 0;
-    margin: 0;
-}
-
-
-/* Reset */
-
-*,
-*:after,
-*:before {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
-
-
-/* Clearfix hack by Nicolas Gallagher: http://nicolasgallagher.com/micro-clearfix-hack/ */
-
-.clearfix:before,
-.clearfix:after {
-    content: " ";
-    display: table;
-}
-
-.clearfix:after {
-    clear: both;
-}
-
-body {
-    font-family: 'berlin';
-    color: #88AED9;
-    z-index: 2;
-}
-
-a {
-    color: #f0f0f0;
-    text-decoration: none;
-    font-size: 14px;
-}
-
-a:hover {
-    color: #000;
-}
-
-.container>header {
-    width: 90%;
-    max-width: 70em;
-    margin: 0 auto;
-    padding: 0 auto;
-}
-
-.container>header h1 {
-    font-size: 50px;
-    line-height: 1.3;
-    margin: 0;
-    float: left;
-    font-weight: 400;
-}
-
-.container>header span {
-    display: block;
-    font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 0.5em;
-    padding: 0 0 0.6em 0.1em;
-}
-
-.container>header nav {
-    float: right;
-}
-
-
-/*
+    
+    body,
+    html {
+        font-size: 100%;
+        padding: 0;
+        margin: 0;
+    }
+    /* Reset */
+    
+    *,
+    *:after,
+    *:before {
+        -webkit-box-sizing: content-box;
+        -moz-box-sizing: content-box;
+        box-sizing: content-box;
+        /*NOTICE all changed from border box */
+    }
+    /* Clearfix hack by Nicolas Gallagher: http://nicolasgallagher.com/micro-clearfix-hack/ */
+    
+    .clearfix:before,
+    .clearfix:after {
+        content: " ";
+        display: table;
+    }
+    
+    .clearfix:after {
+        clear: both;
+    }
+    
+    body {
+        font-family: 'berlin';
+        color: #88AED9;
+        z-index: 2;
+    }
+    
+    a {
+        color: #f0f0f0;
+        text-decoration: none;
+        font-size: 14px;
+    }
+    
+    a:hover {
+        color: #000;
+    }
+    
+    .container>header {
+        width: 90%;
+        max-width: 70em;
+        margin: 0 auto;
+        padding: 0 auto;
+    }
+    
+    .container>header h1 {
+        font-size: 50px;
+        line-height: 1.3;
+        margin: 0;
+        float: left;
+        font-weight: 400;
+    }
+    
+    .container>header span {
+        display: block;
+        font-weight: 700;
+        text-transform: uppercase;
+        letter-spacing: 0.5em;
+        padding: 0 0 0.6em 0.1em;
+    }
+    
+    .container>header nav {
+        float: right;
+    }
+    /*
 
 .container>header nav a {
     display: block;
@@ -122,9 +117,7 @@ a:hover {
 }
 
 */
-
-
-/*
+    /*
 .icon-drop:before,
 .icon-arrow-left:before {
     font-family: 'fontawesome';
@@ -143,9 +136,7 @@ a:hover {
     padding-left: 8px;
 }
 */
-
-
-/*
+    /*
 
 .container>header nav a:hover:before {
     color: rgb(110, 36, 36);
